--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <div class="method-label-hero">Método Prático • Sem Teoria • Base Bíblica</div>
                     
                     <p class="hero-subtitle">
-                        <strong>Enriquecer é uma ciência exata.</strong> Este manual prático te ensina como entrar rapidamente na <strong>FREQUÊNCIA de riqueza através de mentalidade e ações</strong>.
+                        <strong>Enriquecer é uma ciência exata.</strong> Este manual prático te ensina como entrar rapidamente na <strong>FREQUÊNCIA da riqueza através de mentalidade e ações</strong>.
                     </p>
                     
                     <!-- Badges após o subtítulo -->
