--- a/index.html
+++ b/index.html
@@ -555,5 +555,6 @@
 
     <!-- JavaScript -->
     <script src="js/main.js"></script>
+    <script src="js/utm-tracker.js"></script>
 </body>
 </html>
